--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@kripod/uuidv7": "^0.3.4",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
@@ -18,7 +17,7 @@
     "clsx": "^2.0.0",
     "next": "^14.0.0",
     "next-auth": "^5.0.0-beta.3",
-    "pg-promise": "^11.5.4",
+    "pdfkit": "^0.14.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/pdfkit": "^0.13.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "@types/uuid": "^9.0.7",
