--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@onedoc/client": "^0.1.29",
+    "@onedoc/react-print": "^0.1.121",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
     "next": "^14.0.0",
     "next-auth": "^5.0.0-beta.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-to-pdf": "^1.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
@@ -30,8 +29,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/bcrypt": "^5.0.1",
-    "@types/pdfkit": "^0.13.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "@types/uuid": "^9.0.7",
