--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@next/swc-win32-x64-msvc": "^14.2.5",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
-    "clsx": "^2.0.0",
-    "next": "^14.0.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.420.0",
+    "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-to-print": "^2.15.1",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
