--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-to-print": "^2.15.1",
+    "recharts": "^2.14.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
